; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_asn1_encode_test.c_do_enc_dec.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_asn1_encode_test.c_do_enc_dec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 (i8*, i8**)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64, %struct.TYPE_4__*)* @do_enc_dec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @do_enc_dec(i32* %0, i64 %1, %struct.TYPE_4__* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.TYPE_4__*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store %struct.TYPE_4__* %2, %struct.TYPE_4__** %7, align 8
  store i8* null, i8** %8, align 8
  store i32 0, i32* %10, align 4
  %12 = load i32*, i32** %5, align 8
  %13 = bitcast i32* %12 to i8*
  store i8* %13, i8** %11, align 8
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i32 (i8*, i8**)*, i32 (i8*, i8**)** %15, align 8
  %17 = load i8*, i8** %11, align 8
  %18 = call i32 %16(i8* %17, i8** %8)
  store i32 %18, i32* %9, align 4
  %19 = load i32, i32* %9, align 4
  %20 = icmp slt i32 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %32

22:                                               ; preds = %3
  %23 = load i8*, i8** %8, align 8
  %24 = load i32, i32* %9, align 4
  %25 = load i32*, i32** %5, align 8
  %26 = load i64, i64* %6, align 8
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %28 = call i32 @do_decode(i8* %23, i32 %24, i32* %25, i64 %26, %struct.TYPE_4__* %27)
  store i32 %28, i32* %10, align 4
  %29 = load i8*, i8** %8, align 8
  %30 = call i32 @OPENSSL_free(i8* %29)
  %31 = load i32, i32* %10, align 4
  store i32 %31, i32* %4, align 4
  br label %32

32:                                               ; preds = %22, %21
  %33 = load i32, i32* %4, align 4
  ret i32 %33
}

declare dso_local i32 @do_decode(i8*, i32, i32*, i64, %struct.TYPE_4__*) #1

declare dso_local i32 @OPENSSL_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
